search form added

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,14 @@
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
       </ul>
+      <form class="row" action="/search" method="POST">
+        <div class="col-auto">
+          <input type="text" name="customer" class="form-control" placeholder="search">
+        </div>
+        <div class="col-auto">
+          <button type="submit" class="btn btn-primary mb-3">Search</button>
+        </div>
+      </form>
     </div>
   </nav>
 
