autofocus added to search input

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
       </ul>
       <form class="row" action="/search" method="POST">
         <div class="col-auto">
-          <input type="text" name="customer" class="form-control" placeholder="search">
+          <input type="text" name="customer" class="form-control" placeholder="search" autofocus>
         </div>
         <div class="col-auto">
           <button type="submit" class="btn btn-primary mb-3">Search</button>
