--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/top">Top Customers</a>
+        </li>
       </ul>
       <form class="row" action="/search" method="POST">
         <div class="col-auto">
